fix spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,6 +36,10 @@ section {
     margin-bottom: 3rem;
 }
 
+.prospectus {
+    margin-top: 25px;
+}
+
 /* ---- page content ---- */
 
 #cover {
